--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,3 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
     prin
     prin "$(color 7)矢後Yago • エイサーニトロ5"
@@ -706,7 +704,7 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/home/yago/Pictures/Fav pics/Picsart_24-03-05_02-42-16-407.jpg"
+image_source="><><><><"
 
 
 # Ascii Options
